# AstroBridge

./: .gitattributes  .gitignore  01_ngc2516_xmatch_v3.ipynb  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  scripts_setup_structure.ps1  setup_repo.py  test.py
.github/workflows/: ci.yml
notebooks/: 01_ngc2516_xmatch_v3.ipynb  02_validacao_cantat_gaudin.ipynb  README.md
reports/: VALIDATION_REPORT.md
src/astrobridge/: astrometry.py  bayes.py  config.py  data.py  pipeline.py  plots.py  simbad.py
tests/: test_bayes.py
