[project]
name = "astrobridge"
version = "0.1.0"
description = "Probabilistic astronomical cross-match experiments."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
    "tqdm>=4.66"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
