[project]
name = "astrobridge"
version = "0.1.0"
description = "Probabilistic point-source cross-matching: Gaia DR3 × AllWISE × TESS with Budavári-Szalay Bayes factors and FLINT-α novelty detection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Victor Gonçalves Souto", email = "victor@soutoconsultoria.com.br"}
]
keywords = ["astronomy", "cross-match", "gaia", "wise", "bayesian", "flint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "lightkurve>=2.6",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=7.0",
    "jupyterlab>=4.0",
]

[project.urls]
Repository = "https://github.com/VictorGSoutoXP/AstroBridge"
Issues = "https://github.com/VictorGSoutoXP/AstroBridge/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
